backends/drm: fix night color with ICC profiles

Until night color is dealt with properly by adjusting the output whitepoint,
the channel factors have to be multiplied in with the color transformation
matrix manually

BUG: 413134